--- a/css/odev.css
+++ b/css/odev.css
@@ -1,100 +1,80 @@
-/* Base Styles */
-
+/********** Base styles **********/
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 h1 {
-	font-family: Brushstroke, fantasy;
-	color: #000000;
-	text-align: center;
-}
-
-body {
-	background-image: url("background.jpg");
-	background-color: #FEF5CA;
-
+  margin-bottom: 25px;
+  text-align: center;
 }
 
 p {
-	padding: 10px;
-	margin: 0;
+  border: 1px solid #b6b5b4;
+  background-color: #b6b5b4;
+  width: auto;
+  font-family: Helvetica sans-serif;;
+  color: black;
+  margin-top: 25px;
+  padding: 5px;
 }
 
-.container {
-	border: none;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	padding: 10px;
-}
-
-section {
-	border:	1px solid black;
-	background-color: #00FF99;
-	width: 100%;
-	height: 200px;
-	font-family: Helvetica;
-	color: black;
+.title-box {
+	width: 80px;
+	height: 25px;
 	position: relative;
-	overflow: auto;
+	float:  right;
+	border: 1px solid black ;
+	margin-bottom: 5px;
+	font-size: 1.1em;
+	text-align: center;
 }
 
-#chicken {
-	border: 1px solid black;
-	text-align: center;
-	width: 30%;
-	margin-left: 70%;
-	font-family: Georgia,sans-serif;
-	font-weight: bold;
-	font-size: 125%;
-	margin-bottom: 0;
-	margin-top: 0;
-	padding: 5px;
-	background-color: #FFFF00;
+.chicken{
+  background-color: yellow;
+	color: black;
 }
 
-#beef {
-	border: 1px solid black;
-	text-align: center;
-	width: 30%;
-	margin-left: 70%;
-	font-family: Georgia,sans-serif;
-	font-weight: bold;
-	font-size: 125%;
-	margin-bottom: 0;
-	margin-top: 0;
-	padding: 5px;
-	background-color: #FF1439;
-}
-
-#sushi {
-	border: 1px solid black;
-	text-align: center;
-	width: 30%;
-	margin-left: 70%;
-	font-family: Georgia,sans-serif;
-	font-weight: bold;
-	font-size: 125%;
-	margin-bottom: 0;
-	margin-top: 0;
-	background-color: #6495ED;
+.beef{
+  background-color: brown;
 	color: white;
-	padding: 5px;
 }
 
+.sushi{
+  background-color: blue;
+	color: white;
+}
+
+.menu {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  margin: 10px;
+  max-width: 250px;
+  background: #b6b5b4;
+  float: left;
+}
+
+.headerm {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 80px;
+  background-color: #557c3e;
+  text-align: center;
+}
+
+/* Simple Responsive Framework. */
 .row {
-	width: 100%;
+  width: 100%;
 }
 
-/* Desktop view */
-
+/********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
+    border: 1px solid black;
+    background-color: #b6b5b4;
+    margin: 10px;
   }
-
   .col-lg-1 {
     width: 8.33%;
   }
@@ -102,13 +82,13 @@ section {
     width: 16.66%;
   }
   .col-lg-3 {
-    width: 25%;
+    width: 30%;
   }
   .col-lg-4 {
     width: 33.33%;
   }
   .col-lg-5 {
-    width: 41.66%;
+    width: 41.55%;
   }
   .col-lg-6 {
     width: 50%;
@@ -123,7 +103,7 @@ section {
     width: 74.99%;
   }
   .col-lg-10 {
-    width: 83.33%;
+    width: 83.2%;
   }
   .col-lg-11 {
     width: 91.66%;
@@ -131,16 +111,16 @@ section {
   .col-lg-12 {
     width: 100%;
   }
-
 }
 
-/* Tablet view */
-
+/********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
+    border: 1px solid black;
+    background-color: #b6b5b4;
+    margin: 10px;
   }
-
   .col-md-1 {
     width: 8.33%;
   }
@@ -157,7 +137,7 @@ section {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 50%;
+    width: 45%;
   }
   .col-md-7 {
     width: 58.33%;
@@ -178,14 +158,14 @@ section {
     width: 100%;
   }
 }
-
-/* Mobile view */
-
-@media (max-width: 768px) {
+/********** Small devices only **********/
+@media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
- 	float: left;
+    float: left;
+    border: 1px solid black;
+    background-color: #b6b5b4;
+    margin: 10px;
   }
-
   .col-sm-1 {
     width: 8.33%;
   }
