Update and rename css/style.css to style.css

--- a/style.css
+++ b/style.css
@@ -1,62 +1,59 @@
-/* Base Styles */
-
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1 {
-	font-family: Brushstroke, fantasy;
-	color: #000000;
-	text-align: center;
+  text-align: center;
+  margin-bottom: 35px;
 }
 
-body {
-	background-image: url("background.jpg");
-	background-color: #FEF5CA;
-
+.title {
+  border: 1px solid black;
+  font-weight: bold;
+  position: absolute;
+  right: 0;
+  width: 150px;
+  text-align: center;
+  padding: 10px 0 10px 0;
+  margin-top: 0;
 }
 
-p {
-	padding: 10px;
-	margin: 0;
+.description {
+  padding: 45px 10px 5px 10px;
 }
 
-#chicken {
-	
+#Html {
+  background-color: #ffb3b3;
+  color: white;
 }
 
-#beef {
-	border: 1px solid black;
-	width: 30%;
-	margin-left: 70%;
-	margin-bottom: 0;
-	margin-top: 0;
-	background-color: #FF1439;
+#Css {
+  background-color: red;
+  color: white;
 }
 
-#sushi {
-	border: 1px solid black;
-	text-align: center;
-	width: 30%;
-	margin-left: 70%;
-	font-family: Georgia,sans-serif;
-	font-weight: bold;
-	font-size: 125%;
-	margin-bottom: 0;
-	margin-top: 0;
-	background-color: #6495ED;
-	color: white;
-	padding: 5px;
+#Javascript {
+  background-color: #ffff99;
+  color: white;
 }
 
 .row {
-	width: 100%;
+  width: 100%;
+  padding: 0 10px 0 10px;
 }
 
-/* Desktop view */
+div.section {
+  background: gray;
+  border: 1px solid black;
+  position: relative;
+  margin: 10px;
+}
 
+
+/* Desktop */
 @media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
+  .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
 
@@ -70,7 +67,7 @@ p {
     width: 25%;
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: 33%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -96,13 +93,12 @@ p {
   .col-lg-12 {
     width: 100%;
   }
-
 }
 
-/* Tablet view */
-
+/* Tablets */
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6,
+  .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
 
@@ -116,7 +112,7 @@ p {
     width: 25%;
   }
   .col-md-4 {
-    width: 33.33%;
+    width: 33%;
   }
   .col-md-5 {
     width: 41.66%;
@@ -144,11 +140,11 @@ p {
   }
 }
 
-/* Mobile view */
-
-@media (max-width: 768px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
- 	float: left;
+/* Mobile */
+@media (max-width: 767px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6,
+  .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
   }
 
   .col-sm-1 {
@@ -161,7 +157,7 @@ p {
     width: 25%;
   }
   .col-sm-4 {
-    width: 33.33%;
+    width: 33%;
   }
   .col-sm-5 {
     width: 41.66%;
