--- a/style.css
+++ b/style.css
@@ -1,59 +1,97 @@
+/* Base Styles */
+
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 h1 {
-  text-align: center;
-  margin-bottom: 35px;
+	font-family: Brushstroke, fantasy;
+	color: #000000;
+	text-align: center;
 }
 
-.title {
-  border: 1px solid black;
-  font-weight: bold;
-  position: absolute;
-  right: 0;
-  width: 150px;
-  text-align: center;
-  padding: 10px 0 10px 0;
-  margin-top: 0;
+body {
+	background-image: url("background.jpg");
+	background-color: #FEF5CA;
+
 }
 
-.description {
-  padding: 45px 10px 5px 10px;
+p {
+	padding: 10px;
+	margin: 0;
 }
 
-#Html {
-  background-color: #ffb3b3;
-  color: white;
+.container {
+	border: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
 }
 
-#Css {
-  background-color: red;
-  color: white;
+section {
+	border:	1px solid black;
+	background-color: #00FF99;
+	width: 100%;
+	height: 200px;
+	font-family: Helvetica;
+	color: black;
+	position: relative;
+	overflow: auto;
 }
 
-#Javascript {
-  background-color: #ffff99;
-  color: white;
+#chicken {
+	border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: Georgia,sans-serif;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+	background-color: #FFFF00;
+}
+
+#beef {
+	border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: Georgia,sans-serif;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+	background-color: #FF1439;
+}
+
+#sushi {
+	border: 1px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 70%;
+	font-family: Georgia,sans-serif;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	background-color: #6495ED;
+	color: white;
+	padding: 5px;
 }
 
 .row {
-  width: 100%;
-  padding: 0 10px 0 10px;
+	width: 100%;
 }
 
-div.section {
-  background: gray;
-  border: 1px solid black;
-  position: relative;
-  margin: 10px;
-}
+/* Desktop view */
 
-
-/* Desktop */
 @media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
-  .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
 
@@ -67,7 +105,7 @@ div.section {
     width: 25%;
   }
   .col-lg-4 {
-    width: 33%;
+    width: 33.33%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -93,12 +131,13 @@ div.section {
   .col-lg-12 {
     width: 100%;
   }
+
 }
 
-/* Tablets */
+/* Tablet view */
+
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6,
-  .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
 
@@ -112,7 +151,7 @@ div.section {
     width: 25%;
   }
   .col-md-4 {
-    width: 33%;
+    width: 33.33%;
   }
   .col-md-5 {
     width: 41.66%;
@@ -140,11 +179,11 @@ div.section {
   }
 }
 
-/* Mobile */
-@media (max-width: 767px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6,
-  .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left;
+/* Mobile view */
+
+@media (max-width: 768px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+ 	float: left;
   }
 
   .col-sm-1 {
@@ -157,7 +196,7 @@ div.section {
     width: 25%;
   }
   .col-sm-4 {
-    width: 33%;
+    width: 33.33%;
   }
   .col-sm-5 {
     width: 41.66%;
